--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,7 @@
         "node": true
     },
     "rules": {
+        "no-explicit-any":"on",
         "no-debugger": "off",
         "no-console": 0,
         "class-methods-use-this": "off"
